--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,8 +1,8 @@
 version: 2
 updates:
   # npm の依存関係を最新に保つ
-  - package-ecosystem: "maven"
-    directory: "/"
-    target-branch: "master"
+  - package-ecosystem: 'maven'
+    directory: '/'
+    target-branch: 'master'
     schedule:
-      interval: "daily"
+      interval: 'daily'
