--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
   # npm の依存関係を最新に保つ
   - package-ecosystem: 'maven'
     directory: '/'
-    target-branch: 'master'
+    target-branch: 'test'
     schedule:
       interval: 'daily'
